# ExpenseReport-Refactoring-Kata

./: .gitignore  CMakeLists.txt  ExpenseReport_ApprovalTests.cpp  README.md
src/: CMakeLists.txt  Expense.cpp  Expense.h  ExpenseReport.cpp  ExpenseReport.h
test/: CMakeLists.txt  ExpenseReport_ApprovalTests.cpp  ExpenseReport_UnitTesting.cpp
test/approval_tests/: ExpenseReport_ApprovalTests.ExpenseReportApprovalTests.approved.txt  ExpenseReport_ApprovalTests.ExpenseReportApprovalTests.received.txt
